--- a/index.html
+++ b/index.html
@@ -80,11 +80,8 @@
 
     <h4 id="h4"> Favorite Album </h4>
 
-        <p class="text-center">
-            And this could be the "video" part of your website! Here you can add all
-            the video content, displayed inside the cards.
-        </p>
-        <div class="album py-5 bg-dark">
+    
+        <div class="album py-5">
             <div class="row">
                 <div class="col-md-4">
                     <div class="card mb-4 box-shadow">
@@ -251,8 +248,6 @@
                 </div>
             </div>
         </div>
-
-
 
         <div class="container contact-form">
             <div class="contact-image">
